# inference-examples

./: .gitignore  README.md
ai-workflow-langchain/: README.md  main.py  (+1 more)
marketing-agent/: .env.example  LICENSE  README.md  pyproject.toml  run.sh
marketing-agent/client/: .eslintrc.json  .prettierrc  README.md  package-lock.json  package.json  tailwind.config.ts
marketing-agent/client/app/: Home.module.css  globals.css  layout.tsx  page.tsx
marketing-agent/client/components/ProductForm/: ProductForm.module.css  ProductForm.tsx
marketing-agent/client/components/ResourceModal/: ResourceModal.module.css  ResourceModal.tsx
marketing-agent/client/components/ResourcesPanel/: ResourcesPanel.module.css  ResourcesPanel.tsx
marketing-agent/client/components/ThinkingPanel/: ThinkingPanel.module.css  ThinkingPanel.tsx
marketing-agent/client/types/: main.ts  resource.ts
marketing-agent/server/: README.md  pyproject.toml
marketing-agent/server/src/: main.py
marketing-agent/server/src/marketing_agent/: campaign.py  datatypes.py  marketing_copy.py  server.py
marketing-agent/server/tests/: interactive_test.py
marketing-agent/src/: main.py
marketing-agent/src/marketing_agent/: campaign.py  datatypes.py  marketing_copy.py
marketing-agent/src/marketing_agent/copy_plugins/: __init__.py  blog_post.py  email.py  github_project.py  globals.py  linkedin_post.py  press_release.py  twitter_thread.py  video_script.py
marketing-agent/src/marketing_agent/llm/: base_engine.py  cerebras_engine.py  fireworks_engine.py  groq_engine.py  perplexity_engine.py  together_engine.py
(+55 files in other folders)
